WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215900
Scrolling on select element doesn't work after scrolling the page
https://bugs.webkit.org/show_bug.cgi?id=215900
Summary
Scrolling on select element doesn't work after scrolling the page
Simon Fraser (smfr)
Reported
2020-08-27 13:16:16 PDT
Scrolling on select element doesn't work after scrolling the page
Attachments
Patch
(10.20 KB, patch)
2020-08-27 13:17 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2020-08-27 13:17:12 PDT
Created
attachment 407425
[details]
Patch
Simon Fraser (smfr)
Comment 2
2020-08-27 13:17:14 PDT
<
rdar://problem/67766032
>
EWS
Comment 3
2020-08-27 16:47:58 PDT
Committed
r266262
: <
https://trac.webkit.org/changeset/266262
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 407425
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug