Scrolling on select element doesn't work after scrolling the page https://bugs.webkit.org/show_bug.cgi?id=215900 Source/WebCore:

<rdar://problem/67766032>

Reviewed by Tim Horton.

The scrolling thread could use a node that was latched some time ago; we need to
check the freshness of the latched node before using it.

Test: fast/scrolling/latching/latching-stuck-to-main-page.html

* page/scrolling/ScrollingTreeLatchingController.cpp:
(WebCore::ScrollingTreeLatchingController::receivedWheelEvent):
(WebCore::ScrollingTreeLatchingController::latchedNodeForEvent const):
(WebCore::ScrollingTreeLatchingController::latchedNodeIsRelevant const):
* page/scrolling/ScrollingTreeLatchingController.h:

LayoutTests:

Reviewed by Tim Horton.

* fast/scrolling/latching/latching-stuck-to-main-page-expected.txt: Added.
* fast/scrolling/latching/latching-stuck-to-main-page.html: Added.


Canonical link: https://commits.webkit.org/228712@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266262 268f45cc-cd09-0410-ab3c-d52691b4dbfc